2.4.10 (2024-11-14)

- Added support for Llama Index agents. (beta)
- Introduced a new working mode: Agent (Llama Index).
- Added 3 Llama Index agents: OpenAI Agent, ReAct Agent, and Structured Planner Agent.
- Fixed: passing an embed model to vector stores on indexing.

2.4.9 (2024-11-12)

- Mouse movement has been moved to the PyAutoGUI library for seamless operation.
- Bridge calls have been moved to an asynchronous thread.
- Fixed the DALL-E call in Image mode.
- Speed improvements and optimizations.

2.4.8 (2024-11-12)

- Fix: restoring order of notepads.
- Fix: mouse move offset in Mouse and Keyboard plugin.

2.4.7 (2024-11-11)

- Added a new tool: HTML/JS Canvas, connected to the Code Interpreter plugin. This feature enables real-time rendering of HTML/JS code in a Chromium-based output by using two new Code Interpreter commands: render_html_output and get_html_output.
- Added an SVG icon to the New Tab button.
- Improved the system prompt and execution flow in the Command: Mouse And Keyboard plugin and introduced a new option Auto-focus to the plugin settings (default: False).

2.4.6 (2024-11-10)

- Fixed notepad tab titles in Copy To menu.

2.4.5 (2024-11-09)

- Added a new [+] tab button to the right of the tabs.
- Fixed the issue where the tab name disappeared when creating a new tab.
- Fixed the broken find option (CTRL+F) in the chat window.

2.4.4 (2024-11-09)

- Added a new plugin: Command: Mouse And Keyboard. The plugin allows the model to control the mouse and keyboard, control the cursor position, click mouse buttons, use scroll, type text, and press keys on the keyboard.

2.4.3 (2024-11-08)

- Added button to hide output from tools/plugins.
- Added tooltips on the preset list showing the system prompt of the preset.
- Added restoration of tooltips for chat tabs.
- Removed disruptive tooltips from the plugin settings window.
- Improved reading of current tab information in event reading with speech synthesis.
- Minor improvements.
